--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "axios": "^0.27.2",
     "dotenv": "^16.0.2",
     "framer-motion": "^6.5.1",
+    "google-sign-in": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-login": "^5.2.2",
     "react-hot-toast": "^2.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
